20250314_daily_arxiv_update

--- a/arxiv/2025_03_arxiv.html
+++ b/arxiv/2025_03_arxiv.html
@@ -94,6 +94,51 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.04560">https://arxiv.org/abs/2503.04560</a></span> Nonlinear electron-phonon interactions in Migdal-Eliashberg theory</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2409.19317">https://arxiv.org/abs/2409.19317</a></span> Symmetry requirements for current-induced spin magnetization specific to chiral crystals: Multipole analysis and the hidden spin glide symmetry</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.04546">https://arxiv.org/abs/2503.04546</a></span> Symmetry Topological Field Theory for Flavor Symmetry</p>
+<br>
+<p class="p1">20250310</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.05697">https://arxiv.org/abs/2503.05697</a></span> How pairing mechanism dictates topology in valley-polarized superconductors with Berry curvature (Julian May-Mann, Tobias Helbig, Trithep Devakul)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.04943">https://arxiv.org/abs/2503.04943</a></span> Revealing Quantum Geometry in Nonlinear Quantum Materials</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.04911">https://arxiv.org/abs/2503.04911</a></span> Relativistic Mott transitions, quantum criticality, and finite-temperature effects in tunable Dirac materials from functional renormalization (Mireia Tolosa-Simeón, Laura Classen, Michael M. Scherer)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.05519">https://arxiv.org/abs/2503.05519</a></span> Note on surface defects in multiscalar critical models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.04895">https://arxiv.org/abs/2503.04895</a></span> Multipolar Fermi Surface Deformations in Sr2RuO4 Probed by Resistivity and Sound Attenuation: A Window into Electron Viscosity and the Collision Operator (Thomas Scaffidi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2209.05132">https://arxiv.org/abs/2209.05132</a></span> GGI Lectures on Entropy, Operator Algebras and Black Holes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2412.20950">https://arxiv.org/abs/2412.20950</a></span> Four loop renormalization of QCD in the Curci-Ferrari gauge (J.A. Gracey)</p>
+<p class="p2"><br></p>
+<p class="p1">20250311</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.05864">https://arxiv.org/abs/2503.05864</a></span> Electric polarization in Chern insulators: Unifying many-body and single-particle approaches (Yuxuan Zhang, Maissam Barkeshli)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.06584">https://arxiv.org/abs/2503.06584</a></span> Topological superconductivity in two-dimensional π-junction Dirac semimetals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.06914">https://arxiv.org/abs/2503.06914</a></span> Spin of fractional quantum Hall neutral modes and “missing states” on a sphere (Dung Xuan Nguyen, Dam Thanh Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.06160">https://arxiv.org/abs/2503.06160</a></span> Quantum response theory and momentum-space gravity ****</p>
+<p class="p3"><a href="https://arxiv.org/abs/2503.06665">https://arxiv.org/abs/2503.06665</a><span class="s2"> Lindblad many-body scars ***</span></p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.05863">https://arxiv.org/abs/2503.05863</a></span> Spin-polarized superconductivity from excitonic Cooper pairs (Daniele Guerci, Liang Fu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.06586">https://arxiv.org/abs/2503.06586</a></span> Non-hermitian Green’s function theory with N-body interactions: the coupled-cluster similarity transformation</p>
+<p class="p2"><br></p>
+<p class="p1">20250312</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.07708">https://arxiv.org/abs/2503.07708</a></span> Exact Chiral Symmetries of 3+1D Hamiltonian Lattice Fermions (Lei Gioia, Ryan Thorngren)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.07712">https://arxiv.org/abs/2503.07712</a></span> Purely Electronic Model for Exciton-Polaron Formation in Moir ́e Heterostructures (Michael Knap)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.07689">https://arxiv.org/abs/2503.07689</a></span> Quantum phase diagram of the spin-12 Heisenberg antiferromagnet on the square-kagome lattice: a tensor network study (Yasir Iqbal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.07750">https://arxiv.org/abs/2503.07750</a></span> BCS-like formula for Tc does not necessarily imply BCS pairing mechanism *** (Yuxuan Wang, Andrey V. Chubukov)</p>
+<p class="p2"><br></p>
+<p class="p1">20250313</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.09602">https://arxiv.org/abs/2503.09602</a></span> Odd-parity altermagnetism through sublattice currents: From Haldane-Hubbard model to general bipartite lattices (Yu-Ping Lin)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.08846">https://arxiv.org/abs/2503.08846</a></span> A Tutorial on Knots and Quantum Mechanics</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.08621">https://arxiv.org/abs/2503.08621</a></span> Fracton Gauge Theories in Curved Spacetimes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.08776">https://arxiv.org/abs/2503.08776</a></span> Robust Simulations of Many-Body Symmetry-Protected Topological Phase Transitions on a Quantum Processor (Ruizhe Shen, Tianqi Chen, Bo Yang, Yin Zhong, Ching Hua Lee)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.08789">https://arxiv.org/abs/2503.08789</a></span> Mixed Anomalies of Magnetic Symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.09070">https://arxiv.org/abs/2503.09070</a></span> Symmetry-Resolved Entanglement Entropy in Higher Dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.08784">https://arxiv.org/abs/2503.08784</a></span> Elastic Response and Instabilities of Anomalous Hall Crystals *** (Félix Desrochers, Mark R. Hirsbrunner, Joe Huxford, Adarsh S. Patri, T. Senthil, Yong Baek Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.09597">https://arxiv.org/abs/2503.09597</a></span> Universal Properties of Critical Mixed States from Measurement and Feedback (Zhehao Zhang, Yijian Zou, Timothy H. Hsieh, Sagar Vijay)</p>
+<p class="p2"><br></p>
+<p class="p1">20250314</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.09989">https://arxiv.org/abs/2503.09989</a></span> Oscillate and Renormalize: Fast Phonons Reshape the Kondo Effect in Flat Band Systems (Premala Chandra, Piers Coleman)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.10085">https://arxiv.org/abs/2503.10085</a></span> Structure factors and quantum geometry in multiband BCS superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2502.21319">https://arxiv.org/abs/2502.21319</a></span> Topological Quantum Dark Matter via Global Anomaly Cancellation (Juven Wang)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.10584">https://arxiv.org/abs/2503.10584</a></span> Holographic study of shear viscosity and butterfly velocity for magnetic field-driven quantum criticality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.09709">https://arxiv.org/abs/2503.09709</a></span> Generalized Peierls substitution for Wannier obstructions: response to disorder and interactions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.09706">https://arxiv.org/abs/2503.09706</a></span> Correlated flat-band physics in a bilayer kagome metal based on compact molecular orbitals (Qimiao Si)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.09717">https://arxiv.org/abs/2503.09717</a></span> Disentangling anomaly-free symmetries of quantum spin chains (Sahand Seifnashri, Wilbur Shirley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.10372">https://arxiv.org/abs/2503.10372</a></span> Effects of homogeneous doping on the electron-phonon coupling in SrTiO3 (Suk Bum Chung)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.09695">https://arxiv.org/abs/2503.09695</a></span> Modified large-N approach to gapless spin liquids, magnetic orders, and dynamics: Application to triangular lattice antiferromagnets (Anjishnu Bose, Kathleen Hart, Ruairidh Sutcliffe, Arun Paramekanti)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
