20250404_daily_arXiv_update

--- a/arxiv/2025_03_arxiv.html
+++ b/arxiv/2025_03_arxiv.html
@@ -251,6 +251,13 @@
 <p class="p3"><a href="https://arxiv.org/abs/2302.10165">https://arxiv.org/abs/2302.10165</a><span class="s2"> Quantum entropy thermalization</span></p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.20863">https://arxiv.org/abs/2503.20863</a></span> Additivity, Haag duality, and non-invertible symmetries (Shu-Heng Shao, Jonathan Sorce, Manu Srivastava)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.21742">https://arxiv.org/abs/2503.21742</a></span> Les Houches lectures on non-perturbative Seiberg-Witten geometry ***</p>
+<br>
+<p class="p1">20250331</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.21925">https://arxiv.org/abs/2503.21925</a></span> Most topological orders forbid sign-problem-free quantum Monte Carlo: Nonpositive Gauss sum as an indicator ***** (Donghae Seo, Minyoung You, Hee-Cheol Kim, Gil Young Cho)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.21894">https://arxiv.org/abs/2503.21894</a></span> Entanglement in Typical States of Chern-Simons Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2501.07372">https://arxiv.org/abs/2501.07372</a></span> Radiation eikonal for post-Minkowskian observables (Jung-Wook Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2503.21862">https://arxiv.org/abs/2503.21862</a></span> Decomposition and (Non-Invertible) (−1)-Form Symmetries from the Symmetry Topological Field Theory</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2308.16032">https://arxiv.org/abs/2308.16032</a></span> Trade-off between Information Gain and Disturbance in Local Discrimination of Entangled Quantum States (Hyukjoon Kwon)</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
