20250411_daily_arXiv_update

--- a/arxiv/2025_04_arxiv.html
+++ b/arxiv/2025_04_arxiv.html
@@ -84,6 +84,41 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.02736">https://arxiv.org/abs/2504.02736</a></span> Parity violation as enforced symmetry breaking in 3D fermionic topological order (Yang Qi)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.02751">https://arxiv.org/abs/2504.02751</a></span> Roton Superconductivity from Loop-Current Chern Metal on the Kagome Lattice</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2410.22843">https://arxiv.org/abs/2410.22843</a></span> Manifestations of (2 + 1)d chiral anomaly in a graphene plate</p>
+<br>
+<p class="p1">20250407</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.03179">https://arxiv.org/abs/2504.03179</a></span> Magnetic-field-tuned randomness in inhomogeneous altermagnets (Jörg Schmalian, Rafael M. Fernandes)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.02941">https://arxiv.org/abs/2504.02941</a></span> Topological response in open quantum systems with weak symmetries</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.03512">https://arxiv.org/abs/2504.03512</a></span> Independent e- and m-anyon confinement in the parallel field toric code on non-square lattices *****</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.03614">https://arxiv.org/abs/2504.03614</a></span> Higgsing Transitions from Topological Field Theory&amp; Non-Invertible Symmetry in Chern-Simons Matter Theories</p>
+<p class="p2"><br></p>
+<p class="p1">20250408</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.03999">https://arxiv.org/abs/2504.03999</a></span> Automated Polarization Rotation for Multi-Axis Rotational-Anisotropy Second Harmonic Generation Experiments (Nuh Gedik)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.03882">https://arxiv.org/abs/2504.03882</a></span> Identifying Instabilities with Quantum Geometry in Flat Band Systems *** (Leon Balents, Lucile Savary)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.04035">https://arxiv.org/abs/2504.04035</a></span> Symmetrizing the Constraints – Density Matrix Renormalization Group for Constrained Lattice Models (Zi Yang Meng)</p>
+<p class="p2"><br></p>
+<p class="p1">20250409</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.05353">https://arxiv.org/abs/2504.05353</a></span> Timelike Quantum Energy Teleportation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.05427">https://arxiv.org/abs/2504.05427</a></span> Flux attachment theory of fractional excitonic insulators (Ady Stern, C. L. Kane)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.05910">https://arxiv.org/abs/2504.05910</a></span> Testing the parquet equations and the U(1) Ward identity for real-frequency correlation functions from the multipoint numerical renormalization group (Jan von Delft, Fabian B. Kugler)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.06206">https://arxiv.org/abs/2504.06206</a></span> Antiferromagnetism and spin excitations in a two-dimensional non-Hermitian Hatano-Nelson flux model</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.05960">https://arxiv.org/abs/2504.05960</a></span> Generalised Symmetries in Particle Physics</p>
+<p class="p2"><br></p>
+<p class="p1">20250410</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.06849">https://arxiv.org/abs/2504.06849</a></span> Numerical renormalization of glassy dynamics (Johannes Lang, Subir Sachdev, Sebastian Diehl)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.06945">https://arxiv.org/abs/2504.06945</a></span> Generic deformation channels for critical Fermi surfaces including the impact of collisions (Ipsita Mandal)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.06508">https://arxiv.org/abs/2504.06508</a></span> A critical theory for solidification of a liquid Fermi liquid (Tarun Grover, John McGreevy)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.06475">https://arxiv.org/abs/2504.06475</a></span> Successive randomized compression: A randomized algorithm for the compressed MPO–MPS product</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07088">https://arxiv.org/abs/2504.07088</a></span> Pauli ‘unlimited’: magnetic field induced-superconductivity in UTe2 (Josephine J. Yu, Yue Yu, Chaitanya Murthy, S. Raghu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07014">https://arxiv.org/abs/2504.07014</a></span> Fermi surface as a quantum critical manifold: gaplessness, order parameter, and scaling in d-dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07019">https://arxiv.org/abs/2504.07019</a></span> Non-Hermitian Numerical Renormalization Group: Solution of the non-Hermitian Kondo model</p>
+<p class="p2"><br></p>
+<p class="p1">20250411</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07194">https://arxiv.org/abs/2504.07194</a></span> Magnetic ground state of a Jeff = 1/2 based frustrated triangular lattice antiferromagnet (Suyoung Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07341">https://arxiv.org/abs/2504.07341</a></span> Learning to erase quantum states: thermodynamic implications of quantum learning theory ***** (Haimeng Zhao, Yuzhen Zhang, John Preskill)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07173">https://arxiv.org/abs/2504.07173</a></span> Quantum Geometry: Revisiting electronic scales in quantum matter ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07180">https://arxiv.org/abs/2504.07180</a></span> Fixed Point Stability Switches from Attractive to Repulsive at 2d Pomeranchuk/Stoner Instabilities via Field-Theoretical RG ***** (Han Ma)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07941">https://arxiv.org/abs/2504.07941</a></span> Quantum error correction via multi-particle discrete-time quantum walk</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07688">https://arxiv.org/abs/2504.07688</a></span> Four-loop renormalization with a cutoff in a sextic model</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
