--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@ My recent talk: <a href="https://meetings.aps.org/Meeting/MAR22/Event/433747">"F
 			</li>
 			<li><b>[Apr. 2024]</b> <a href="#publication" style="text-decoration:none;color:var(--font-color)">My recent paper</a> <a href="https://journals.aps.org/prd/accepted/5b078QedD9b1fd30e5965265f634663c71d33dfa2" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been accepted on <span style="font-style: italic;">Physical Review D</span>!
 		</li>
-		<li><b>[Mar. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2403.09627" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been posted on arXiv!
-				</li>
 		</ul>
 <details class="description" close><summary data-open="[Close]" data-close="Past News"></summary>
 	<ul>
+		<li><b>[Mar. 2024]</b> The <a href="#publication" style="text-decoration:none;color:var(--font-color)">preprint of my new paper</a> <a href="https://arxiv.org/abs/2403.09627" style="font-style: italic;">"On spontaneous breaking of the SO(2N) symmetry in the Gross-Neveu model (arXiv:2403.09627)"</a> has been posted on arXiv!
+				</li>
 		<li><b>[Mar. 2024]</b> I have given a <a href="#contributed" style="text-decoration:none;color:var(--font-color)">contributed talk</a> <a href="https://meetings.aps.org/Meeting/MAR24/Session/A07.5" style="font-style: italic;">"Bosonization of Non-Fermi Liquids" (2023/03/04 08:48 AM, Room L100H)</a> at APS march meeting 2024, Minneapolis, Minnesota, USA!
 <!--			<div style="overflow: visible"><details class="description" close><summary data-open="[Close]" data-close="[Details]"></summary><img src="img/march2023_ads.png" width="100%" alt="Summary of Talk"></details></div>
 			-->
@@ -189,7 +189,7 @@ Articles related to my works:
 			  <div class="sign3" style="display: inline-block;">W</div>
 			  <div class="sign1" style="display: inline-block;float: left;">N</div>
 			  <div class="sign2" style="display: inline-block;float: left;">E</div>
-			  <div class="shadow"></div></div>&nbsp<a href="https://arxiv.org/abs/2411.16842" style="text-decoration:none;color:var(--font-color)">"
+			  <div class="shadow"></div></div>&nbsp<a href="https://link.aps.org/doi/10.1103/PhysRevB.111.115131" style="text-decoration:none;color:var(--font-color)">"
 Gross-Neveu-Yukawa SO(2) and SO(3) tensorial criticality
 "</a> <div class="bouncing-text" style="display: inline-block;">
 		  <div class="Psign9" style="display: inline-block;">D</div>
@@ -713,11 +713,11 @@ Theoretical Physics, Condensed matter physics, Strongly correlated systems, Quan
 
 		</li>
 		<li><div>
-		<span class="cvitem"><div class="bouncing-text" style="display: inline-block;">
+		<span class="cvitem"><!--<div class="bouncing-text" style="display: inline-block;">
   <div class="sign3" style="display: inline-block;">W</div>
   <div class="sign1" style="display: inline-block;float: left;">N</div>
   <div class="sign2" style="display: inline-block;float: left;">E</div>
-  <div class="shadow"></div></div> APS March Meeting 2024 (Talk) </span>
+  <div class="shadow"></div></div>--> APS March Meeting 2024 (Talk) </span>
 		<span class="cvperiod">March 2024</span>
 		</div>
 		<div class="cvitemcontent"> <a href="https://meetings.aps.org/Meeting/MAR24/Session/A07.5">"Bosonization of Non-Fermi Liquids"</a> </div>	
