20250418_daily_arXiv_update

--- a/arxiv/2025_04_arxiv.html
+++ b/arxiv/2025_04_arxiv.html
@@ -119,6 +119,56 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07180">https://arxiv.org/abs/2504.07180</a></span> Fixed Point Stability Switches from Attractive to Repulsive at 2d Pomeranchuk/Stoner Instabilities via Field-Theoretical RG ***** (Han Ma)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07941">https://arxiv.org/abs/2504.07941</a></span> Quantum error correction via multi-particle discrete-time quantum walk</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.07688">https://arxiv.org/abs/2504.07688</a></span> Four-loop renormalization with a cutoff in a sextic model</p>
+<br>
+<p class="p1">20250414</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08597">https://arxiv.org/abs/2504.08597</a></span> Altermagnetism Without Crystal Symmetry (Johannes Knolle)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08139">https://arxiv.org/abs/2504.08139</a></span> Replica manifolds, pole skipping, and the butterfly effect</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08375">https://arxiv.org/abs/2504.08375</a></span> Boundary Scattering and Non-invertible Symmetries in 1 + 1 Dimensions</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08707">https://arxiv.org/abs/2504.08707</a></span> Designing Topological High-Order Van Hove Singularities: Twisted Bilayer Kagom ́e</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08557">https://arxiv.org/abs/2504.08557</a></span> Symmetries, Conservation Laws and Entanglement in Non-Hermitian Fermionic Lattices</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08095">https://arxiv.org/abs/2504.08095</a></span> Sheaf Topos Theory: A powerful setting for Lagrangian Field Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20250415</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10310">https://arxiv.org/abs/2504.10310</a></span> Existence of Nonequilibrium Glasses in the Degenerate Stealthy Hyperuniform Ground-State Manifold (Jaeuk Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08925">https://arxiv.org/abs/2504.08925</a></span> Universality of SU(∞) relaxation dynamics for SU(nf)-symmetric spin-models</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10447">https://arxiv.org/abs/2504.10447</a></span> Quantum geometry from the Moyal product: quantum kinetic equation and non-linear response (Lucile Savary, Leon Balents)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08887">https://arxiv.org/abs/2504.08887</a></span> Planar quantum low-density parity-check codes with open boundaries ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08918">https://arxiv.org/abs/2504.08918</a></span> Fault-tolerant protocols through spacetime concatenation</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.08895">https://arxiv.org/abs/2504.08895</a></span> How quantum fluctuations freeze a classical liquid and then melt it into a topological one (Eun-Ah Kim, Titus Neupert)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.09254">https://arxiv.org/abs/2504.09254</a></span> Design of altermagnetic models from spin clusters ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.09847">https://arxiv.org/abs/2504.09847</a></span> ZN generalizations of three-dimensional stabilizer codes (Chanbeen Lee, Yaozong Hu, Gil Young Cho, Haruki Watanabe)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10027">https://arxiv.org/abs/2504.10027</a></span> Deconfined Quantum Critical Point: A Review of Progress ***</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10114">https://arxiv.org/abs/2504.10114</a></span> t-J model for strongly correlated two-orbital systems: Application to bilayer nickelate superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10216">https://arxiv.org/abs/2504.10216</a></span> Orbital orders under magnetic fields in cubic PrIr2Zn20</p>
+<p class="p3"><a href="https://arxiv.org/abs/2504.09672">https://arxiv.org/abs/2504.09672</a><span class="s2"> Duality Symmetries</span></p>
+<p class="p2"><br></p>
+<p class="p1">20250416</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10678">https://arxiv.org/abs/2504.10678</a></span> Out-of-equilibrium dynamics across the first-order quantum transitions of one-dimensional quantum Ising models (Ettore Vicari)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10566">https://arxiv.org/abs/2504.10566</a></span> Cat states carrying long-range correlations in the many-body localized phase</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10569">https://arxiv.org/abs/2504.10569</a></span> Higher-Form Anomalies Imply Intrinsic Long-Range Entanglement (Po-Shen Hsin, Ryohei Kobayashi, Abhinav Prem)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10774">https://arxiv.org/abs/2504.10774</a></span> Ground-State-Based Model Reduction with Unitary Circuits (Shengtao Jiang, Steven R. White)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10835">https://arxiv.org/abs/2504.10835</a></span> Gapless Foliated-Exotic Duality</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.11428">https://arxiv.org/abs/2504.11428</a></span> Probing the Quantum Geometry of Correlated Metals using Optical Conductivity</p>
+<p class="p2"><br></p>
+<p class="p1">20250417</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.10803">https://arxiv.org/abs/2504.10803</a></span> Control-driven critical fluctuations across quantum trajectories *** (J. H. Pixley)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.11983">https://arxiv.org/abs/2504.11983</a></span> Non-orientable Exceptional Points in Twisted Boundary Systems *** (Jung-Wan Ryu, Jae-Ho Han, Moon Jip Park, Hee Chul Park, Chang-Hwan Yi)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12127">https://arxiv.org/abs/2504.12127</a></span> A Strong-Coupling-Limit Study on the Pairing Mechanism in the Pressurized La3 Ni2 O7 (Congjun Wu)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12233">https://arxiv.org/abs/2504.12233</a></span> Hardness of observing strong-to-weak symmetry breaking</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.11523">https://arxiv.org/abs/2504.11523</a></span> Instability of the critical Ngai’s coupling and two-boson mechanism in metals</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12298">https://arxiv.org/abs/2504.12298</a></span> Projectively implemented altermagnetism in an exactly solvable quantum spin liquid *** (Avedis Neehus, Achim Rosch, Johannes Knolle, Urban F. P. Seifert)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.11994">https://arxiv.org/abs/2504.11994</a></span> Introduction to Langevin Stochastic Processes</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12290">https://arxiv.org/abs/2504.12290</a></span> Diffeomorphism in Closed String Field Theory</p>
+<p class="p2"><br></p>
+<p class="p1">20250418</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12385">https://arxiv.org/abs/2504.12385</a></span> Learning transitions in classical Ising models and deformed toric codes (Hidetoshi Nishimori, Simon Trebst)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12411">https://arxiv.org/abs/2504.12411</a></span> Spontaneous symmetry breaking in the Heisenberg antiferromagnet on a triangular lattice (Oleg Tchernyshyov)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12653">https://arxiv.org/abs/2504.12653</a></span> Current-driven dynamics of antiferromagnetic domain-wall skyrmions (Wooyon Kim, Jun Seok Seo, Se Kwon Kim)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12600">https://arxiv.org/abs/2504.12600</a></span> Boundary criticality in two-dimensional interacting topological insulators (Yang Ge, Hong Yao, Shao-Kai Jian)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12396">https://arxiv.org/abs/2504.12396</a></span> Probing viscous regimes of spin transport with local magnetometry (Jun Ho Son)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.13166">https://arxiv.org/abs/2504.13166</a></span> Topologically enabled superconductivity: possible implications for rhombohedral graphene (Urban F.P. Seifert, Elio J. K ̈onig)</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12414">https://arxiv.org/abs/2504.12414</a></span> Symmetry Aspects of Chiral Superconductors</p>
+<p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.13148">https://arxiv.org/abs/2504.13148</a></span> Relative entropy of squeezed states in Quantum Field Theory</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
