20250428_daily_arXiv_update

--- a/arxiv/2025_04_arxiv.html
+++ b/arxiv/2025_04_arxiv.html
@@ -169,6 +169,41 @@
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.13166">https://arxiv.org/abs/2504.13166</a></span> Topologically enabled superconductivity: possible implications for rhombohedral graphene (Urban F.P. Seifert, Elio J. K ̈onig)</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.12414">https://arxiv.org/abs/2504.12414</a></span> Symmetry Aspects of Chiral Superconductors</p>
 <p class="p1"><span class="s1"><a href="https://arxiv.org/abs/2504.13148">https://arxiv.org/abs/2504.13148</a></span> Relative entropy of squeezed states in Quantum Field Theory</p>
+<br>
+<p class="p1">20250421</p>
+<p class="p2"><a href="https://arxiv.org/abs/2504.13188">https://arxiv.org/abs/2504.13188</a><span class="s1"> Landau theory of CeCoSi</span></p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2405.08817">https://arxiv.org/abs/2405.08817</a></span> Quantum oscillations in the hole-doped cuprates and the confinement of spinons (Pietro M. Bonetti, Maine Christosa, Subir Sachdev)</p>
+<p class="p3"><br></p>
+<p class="p1">20250422</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.14166">https://arxiv.org/abs/2504.14166</a></span> Probing Loop Currents and Collective Modes of Charge Density Waves in Kagome Materials with NV Centers (Naoto Nagaosa)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.14558">https://arxiv.org/abs/2504.14558</a></span> A Review on the Applications of Density Functional Theory to the FQH System</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.14949">https://arxiv.org/abs/2504.14949</a></span> Photoinduced DC Hall current in few-layer black phosphorus with a gate-tunable Floquet gap (Taehun Kim, Hansol Kim, Dongeun Kim, Hongki Min)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.14380">https://arxiv.org/abs/2504.14380</a></span> Gauging Quantum Phases: A Matrix Product State Approach</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.14577">https://arxiv.org/abs/2504.14577</a></span> Unconventional magnetism in spin-orbit coupled systems (Congjun Wu)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.15091">https://arxiv.org/abs/2504.15091</a></span> Wireless energy transfer in non-Hermitian quantum battery</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.14910">https://arxiv.org/abs/2504.14910</a></span> Erratic non-Hermitian skin localization﻿ ﻿(Stefano Longhi﻿)</p>
+<p class="p3"><br></p>
+<p class="p1">20250423</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.15444">https://arxiv.org/abs/2504.15444</a></span> The Lee-Wick-Chern-Simons pseudo-quantum electrodynamics</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.15338">https://arxiv.org/abs/2504.15338</a></span> Interacting Chern insulator transition on the sphere: revealing the Gross-Neveu-Yukawa criticality (Dung-Hai Lee)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.07344">https://arxiv.org/abs/2504.07344</a></span> Simulating quantum dynamics in two-dimensional lattices with tensor network influence functional belief propagation</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.15755">https://arxiv.org/abs/2504.15755</a></span> Emergent Kitaev materials in synthetic Fermi-Hubbard bilayers</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.15788">https://arxiv.org/abs/2504.15788</a></span> A primer on Kitaev Model: Basic aspects, material realization, and recent experiments</p>
+<p class="p3"><br></p>
+<p class="p1">20250424</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.16239">https://arxiv.org/abs/2504.16239</a></span> Normal state quantum geometry, non-locality and superconductivity</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.16165">https://arxiv.org/abs/2504.16165</a></span> Robust Mixed-State Cluster States and Spurious Topological Entanglement Negativity ***** (Seunghun Lee, Eun-Gook Moon)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.16308">https://arxiv.org/abs/2504.16308</a></span> Nontrivial entanglement passively mediated by a quenched magnetic impurity</p>
+<p class="p3"><br></p>
+<p class="p1">20250425</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17786">https://arxiv.org/abs/2504.17786</a></span> Emergent fractals in dirty topological crystals (Bitan Roy)</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.16994">https://arxiv.org/abs/2504.16994</a></span> Quantum information conveyor belt</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17000">https://arxiv.org/abs/2504.17000</a></span> Bosonic vs. Fermionic Matter in Quantum Simulations of 2 + 1D Gauge Theories</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17320">https://arxiv.org/abs/2504.17320</a></span> Lindblad dynamics in holography</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17092">https://arxiv.org/abs/2504.17092</a></span> Lattice Dynamics of Energy Materials Investigated by Neutron Scattering</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17437">https://arxiv.org/abs/2504.17437</a></span> Lectures on measurement in quantum field theory</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17488">https://arxiv.org/abs/2504.17488</a></span> MICROSCOPIC DERIVATION OF THE STATIONARY CHERN–SIMONS–SCHRÖDINGER EQUATION FOR ALMOST-BOSONIC ANYONS</p>
+<p class="p1"><span class="s2"><a href="https://arxiv.org/abs/2504.17686">https://arxiv.org/abs/2504.17686</a></span> Metal-insulator transitions in pyrochlore oxides</p>
 	<iframe src="../last.html" style="width:100%; height:26; border:none"></iframe>
 	</div>
 <!--<div style="font-size:75%" id="last">since 2014-12-31 / last update 2019-12-06</div>-->
